[package]
name = "sbchargelimit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "It keeps your laptop's battery charge below a certain threshold, using a SwitchBot smart plug."
repository = "https://github.com/tana/shiftreg-spi"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
btleplug = "0.11.5"
confy = "0.6.1"
serde = { version = "1.0.203", features = ["derive"] }
starship-battery = "0.8.3"
tao = "0.28.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tray-icon = "0.14.3"
uuid = "1.8.0"
