[package]
name = "sbchargelimit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "It keeps your laptop's battery charge below a certain threshold, using a SwitchBot smart plug."
repository = "https://github.com/tana/sbchargelimit"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
btleplug = "0.11.6"
chrono = "0.4.38"
confy = "0.6.1"
directories = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
open = { version = "5.3.0", features = ["shellexecute-on-windows"] }
pluglib = { git = "https://github.com/tana/pluglib.git", version = "0.1.0" }
serde = { version = "1.0.203", features = ["derive"] }
starship-battery = "0.8.3"
tao = "0.28.1"
tokio = { version = "1.38.0", features = ["full"] }
tray-icon = "0.14.3"
